--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "chr0n1x/lol-champions",
-    "description": "PHP API wrapper for the RiotAPI Champions endpoint",
+    "name": "league-of-legends-api/champion",
+    "description": "PHP API wrapper for the RiotAPI Champion endpoint",
     "license": "MIT",
     "authors": [
         {
@@ -10,9 +10,14 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "nategood/httpful": "0.2.11"
+        "league-of-legends-api/core": "1.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.30"
+    },
+    "autoload": {
+        "psr-0": {
+            "Riot": "src"
+        }
     }
 }
